tests/tc/pos/upcast-02.js

/*@ simple :: (x: {a: number}) => {  } */
function simple(x) {
  return x;
}


