tests/tc/neg/noret.js
/*@ foo :: (number) => number */
function foo(x) {

  if (x == 0)
    return 0;

}

